	* add_torrent() will now throw if called while the session object is
	  being closed.
	* added the ability to limit the number of simultaneous half-open
	  TCP connections. Flags in peer_info has been added.

release 0.9.1

	* made the session disable file name checks within the boost.filsystem library
	* fixed race condition in the sockets
	* strings that are invalid utf-8 strings are now decoded with the
	  local codepage on windows
	* added the ability to build libtorrent both as a shared library
	* client_test can now monitor a directory for torrent files and automatically
	  start and stop downloads while running
	* fixed problem with file_size() when building on windows with unicode support
	* added a new torrent state, allocating
	* added a new alert, metadata_failed_alert
	* changed the interface to session::add_torrent for some speed optimizations.
	* greatly improved the command line control of the example client_test.
	* fixed bug where upload rate limit was not being applied.
	* files that are being checked will no longer stall files that don't need
	  checking.
	* changed the way libtorrent identifies support for its excentions
	  to look for 'ext' at the end of the peer-id.
	* improved performance by adding a circle buffer for the send buffer.
	* fixed bugs in the http tracker connection when using an http proxy.
	* fixed problem with storage's file pool when creating torrents and then
	  starting to seed them.
	* hard limit on remote request queue and timeout on requests (a timeout
	  triggers rerequests). This makes libtorrent work much better with
	  "broken" clients like BitComet which may ignore requests.

Initial release 0.9

	* multitracker support
	* serves multiple torrents on a single port and a single thread
	* supports http proxies and proxy authentication
	* gzipped tracker-responses
	* block level piece picker
	* queues torrents for file check, instead of checking all of them in parallel